[project]
name = "livekit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit>=1.1.2",
    "livekit-agents[deepgram,openai,rime,silero,turn-detector]~=1.4.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "load-dotenv>=0.1.0",
]
